--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,14 @@
-AC_INIT([bibtag], [1.1.0], [matteo@corti.li])
+AC_INIT([bibtag], [1.1.0], [https://github.com/matteocorti/bibtag/issues])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
  Makefile
 ])
+
+AC_CHECK_HEADER(stdio.h)
+AC_CHECK_HEADER(ctype.h)
+AC_CHECK_HEADER(string.h)
+AC_CHECK_HEADER(stdlib.h)
+
 AC_OUTPUT
